[gd_scene load_steps=14 format=3 uid="uid://udgwh0y8xnf5"]

[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_4ct8j"]
[ext_resource type="Theme" uid="uid://bylbyy3q0yish" path="res://Assets/Theme.tres" id="1_n1885"]
[ext_resource type="AudioStream" uid="uid://dwgk2d86iok67" path="res://Assets/SFX/PlayClick.wav" id="3_jgsdo"]
[ext_resource type="AudioStream" uid="uid://c180bq2nldbwv" path="res://Assets/SFX/LeaderboardClick.wav" id="4_kqbj3"]
[ext_resource type="AudioStream" uid="uid://buscb5ddkk40o" path="res://Assets/SFX/QuitClick.wav" id="4_sq1kg"]
[ext_resource type="PackedScene" uid="uid://d2ccag3uk17k7" path="res://Shaders/crt.tscn" id="6_wbv70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5fo4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxoe2"]

[sub_resource type="Animation" id="Animation_wbol5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/PlayButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/PlayButton/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/QuitButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/QuitButton/AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/LeaderboardButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/LeaderboardButton/AudioStreamPlayer2D:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uxt4o"]
resource_name = "leaderboard_pressed"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/LeaderboardButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/LeaderboardButton/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1gluo"]
resource_name = "play_pressed"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/PlayButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/PlayButton/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1b6rj"]
resource_name = "quit_pressed"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/QuitButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/MainMenu/ButtonContainer/QuitButton/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g47l7"]
_data = {
"RESET": SubResource("Animation_wbol5"),
"leaderboard_pressed": SubResource("Animation_uxt4o"),
"play_pressed": SubResource("Animation_1gluo"),
"quit_pressed": SubResource("Animation_1b6rj")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ct8j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_right = 42.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Evader Ant"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_n1885")

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/MainMenu"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/MainMenu/ButtonContainer"]
layout_mode = 2
text = "PLAY"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer/MainMenu/ButtonContainer/PlayButton"]
stream = ExtResource("3_jgsdo")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MainMenu/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_c5fo4")

[node name="LeaderboardButton" type="Button" parent="VBoxContainer/MainMenu/ButtonContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer/MainMenu/ButtonContainer/LeaderboardButton"]
stream = ExtResource("4_kqbj3")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/MainMenu/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_uxoe2")

[node name="QuitButton" type="Button" parent="VBoxContainer/MainMenu/ButtonContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="VBoxContainer/MainMenu/ButtonContainer/QuitButton"]
stream = ExtResource("4_sq1kg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g47l7")
}

[node name="CRT" parent="." instance=ExtResource("6_wbv70")]

[connection signal="pressed" from="VBoxContainer/MainMenu/ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu/ButtonContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
